tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.out
/workspace/mochi/tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.st:6: invalid assignment to argument a
rows:
Object: 1 error: did not understand #%
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
SmallInteger(Object)>>doesNotUnderstand: #% (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.st:17)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.st:75)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.st:91)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.st:104)

sums:
Object: 1 error: did not understand #%
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
SmallInteger(Object)>>doesNotUnderstand: #% (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.st:17)
optimized [] in UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.st:75)
optimized [] in UndefinedObject>>executeStatements ("Global garbage collection... done"
../../tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.st:119)
Array(SequenceableCollection)>>do: (SeqCollect.st:827)
UndefinedObject>>executeStatements (../../tests/rosetta/out/Smalltalk/9-billion-names-of-god-the-integer.st:118)
